--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,14 +2,14 @@
   <ion-header>
     <ion-toolbar>
       <!-- <ion-title>Menu</ion-title> -->
-      <img src="../assets/imgs/volentImg.jpg">
+      <img class="menu-img" src="../assets/imgs/im-human.jpg">
     </ion-toolbar>
   </ion-header>
 
   <ion-content  >
     <ion-list side="right"  >
         
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+      <button class="menu-tit" menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
           <ion-icon ios={{p.icon}} md={{p.md}}></ion-icon>
         {{p.title}}
         
