--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -9,4 +9,25 @@ body, .ion-menu{
   {
     color:#f4f4f4;
   }
+  .item-ios, .item-md{
+    color: #00a985
+  }
 // $toolbar-background: color($colors, #107979);
+
+.item-ios[detail-push] .item-inner,
+button.item-ios:not([detail-none]) .item-inner,
+a.item-ios:not([detail-none]) .item-inner {
+  background-image: none;
+  padding-right: 0px;
+
+}
+.menu-tit{
+ color: #7d7d7d;
+}
+.menu-img{
+  width: 70%;
+  height: 70%;
+  margin-right: 10%;
+  margin-top: 10%;
+  margin-bottom: 20%;
+}
