--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,6 +3,7 @@ page-home{
     body{
         direction: rtl;
     }
+ 
     // #navColor{
     //     background: #107979;
     // }
@@ -28,6 +29,13 @@ page-home{
       .slide{
           padding-top: 10px;
       }
+      .btn-w{
+          color:#fff
+      }
+      .g-font{
+        font-family: 'Droid Arabic Kufi', serif;
+        color: #fff
+    }
       //Start Social Media
       .list-inline{padding-left:0;margin-left:-5px;list-style:none}
       .list-inline>li{display:inline-block;padding-right:5px;padding-left:5px}
