--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,7 +3,7 @@ page-home{
     body{
         direction: rtl;
     }
- 
+
     // #navColor{
     //     background: #107979;
     // }
@@ -14,7 +14,7 @@ page-home{
     }
     .toolbar-background {
         background-color: #298b74;
-       
+
       }
       .toolbar-title-md
       {
@@ -25,7 +25,7 @@ page-home{
         color:#f4f4f4;
       }
 
-      
+
       .slide{
           padding-top: 10px;
       }
@@ -86,13 +86,21 @@ page-home{
         background-color: #ebe8e8;
     }
     .styleType{
-        font-weight: bold; 
+        font-weight: bold;
         font-size: 1.5rem;
         padding-left:5px;
         padding-right: 3px;
       }
+      .styleType2{
+        font-weight: bold;
+        font-size: 1.5rem;
+        color:black;
+        padding-left:22px;
+        padding-right:22px;
+      }
+
       h2{
-        font-weight: bold; 
+        font-weight: bold;
         font-size: 1.5rem;
       }
     // .material{
@@ -100,4 +108,3 @@ page-home{
     // }
 }
 
- 
