--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
   <ion-header>
     <ion-toolbar>
       <!-- <ion-title>Menu</ion-title> -->
-      <img class="menu-img" src="./assets/imgs/im-human.jpg">
+      <img class="menu-img" src="./assets/imgs/logoApp.png">
     </ion-toolbar>
   </ion-header>
 
