--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -61,6 +61,30 @@ page-home{
         padding-top: 2px;
         font-size: 30px; //Preferred size here
     }
+    .card[_ngcontent-c0] {
+        position: relative;
+        background-color: #fff;
+        -webkit-transition: -webkit-box-shadow .25s;
+        transition: -webkit-box-shadow .25s;
+        transition: box-shadow .25s;
+        transition: box-shadow .25s, -webkit-box-shadow .25s;
+        border-radius: 2px;
+        
+    }
+    
+    .grey-text.text-darken-4[_ngcontent-c0] {
+        color: #212121 !important;
+        background:#ebe8e8;
+        font-size: 18px;
+        // color: black;
+    }
+    
+    .card-md{
+        margin-top: 10px;
+        // margin-bottom: 20px;
+        margin-left: 0px;
+        padding: 0px;
+    }
     .card-title-md{
         font-size:1.5rem;
     }
@@ -70,7 +94,10 @@ page-home{
         // background: white;
         // border: 1px solid white;
         // border-radius: 3px;
-        padding:15px;
+        padding-left:15px;
+        padding-right:15px;
+        padding-bottom:15px;
+        padding-top:0px;
         width: 100%;
         max-width: 400px;
         // margin: 2rem auto;
@@ -88,7 +115,7 @@ page-home{
     .styleType{
         font-weight: bold;
         font-size: 1.5rem;
-        padding-left:5px;
+        padding-left:2px;
         padding-right: 3px;
       }
       .styleType2{
@@ -103,8 +130,58 @@ page-home{
         font-weight: bold;
         font-size: 1.5rem;
       }
-    // .material{
-    //     background: #298b74;
-    // }
+
+    .card .card-content .card-title {
+    display: block;
+    line-height: 32px;
+    margin-bottom: 8px;
+    }
+    .card .card-title.activator {
+        cursor: pointer;
+    }
+    .card .card-title {
+        font-size: 15px;
+        font-weight: 300;
+    }  
+    .row .col {
+        float: left;
+        box-sizing: border-box;
+        min-height: 1px;
+        padding: 0px 0px;
+        padding-top: 0px;
+        padding-right: 0px;
+        padding-bottom: 0px;
+        padding-left: 0px;
+    }
+    .row[_ngcontent-c0]{
+        margin-bottom: 0px;
+    }
+    
+    .row[_ngcontent-c0] .position{
+        margin-left: auto;
+        margin-right: auto;
+    }
+     .card-md .position{
+        font-size: 1.4rem;
+        margin-top: 0px;
+        background: #ebe8e8;
+        margin-bottom: 0px;
+        margin-left: 0px;
+        margin-right: 0px;
+        width:100%;
+    }
+    .card[_ngcontent-c0] .card-reveal[_ngcontent-c0] {
+        padding: 10px;
+        position: absolute;
+        background-color: #fff;
+        width: 100%;
+        overflow-y: auto;
+        left: 0;
+        top: 100%;
+        height: 100%;
+        z-index: 3;
+        display: none;
+    }
+    
 }
 
